# pyProfileMgr

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  template_usage.md
.github/workflows/: test.yml
coding-guidelines/: README.md
doc/: README.md
doc/commands/: profile.md
doc/detailed-design/: conf.py  index.rst  update_doc_from_src.py
doc/uml/: architecture.puml  deployment.puml  overview.puml
src/pyProfileMgr/: __init__.py  __main__.py  cmd_profile.py  file_handler.py  file_helper.py  jira_server.py  print_type.py  profile_data.py  profile_mgr.py  pyProfileMgr.py  ret.py  version.py
tests/: test_01_profile.py
tests/test_data/: testCertificate.cert
