[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "pyProfileMgr"
version = "1.0.0"
description = "Library containing the Profile Manager."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Stefan Vogel", email = "stefan.vogel@newtec.de" }
]
license = {text = "BSD 3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "colorama>=0.4.6",
    "toml>=0.10.2"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
documentation = "https://github.com/NewTec-GmbH/pyProfileMgr"
repository = "https://github.com/NewTec-GmbH/pyProfileMgr"
tracker = "https://github.com/NewTec-GmbH/pyProfileMgr/issues"

[project.scripts]
pyProfileMgr = "pyProfileMgr.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
pyProfileMgr = ["pyproject.toml"]
